--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll"
   },
@@ -22,31 +22,33 @@
     "axios": "^1.6.5",
     "convert-units": "^2.3.4",
     "d3-shape": "^3.2.0",
-    "expo": "~50.0.2",
+    "expo": "~50.0.5",
     "expo-checkbox": "~2.7.0",
-    "expo-file-system": "~16.0.4",
+    "expo-file-system": "~16.0.5",
     "expo-font": "~11.10.2",
-    "expo-linear-gradient": "~12.7.0",
+    "expo-linear-gradient": "~12.7.1",
     "expo-linking": "~6.2.2",
-    "expo-router": "3.4.4",
-    "expo-splash-screen": "~0.26.3",
-    "expo-sqlite": "~13.2.1",
+    "expo-router": "~3.4.6",
+    "expo-splash-screen": "~0.26.4",
+    "expo-sqlite": "~13.2.2",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
-    "expo-web-browser": "~12.8.1",
+    "expo-web-browser": "~12.8.2",
     "knex": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-progress-circle": "^2.1.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "14.1.0",
     "react-native-svg-transformer": "^1.3.0",
-    "react-native-web": "~0.19.6",
-    "react-native-reanimated": "~3.6.0",
-    "react-native-gesture-handler": "~2.14.0"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
